--- a/Rules
+++ b/Rules
@@ -1,18 +1,15 @@
 #!/usr/bin/env ruby
 
-compile '/**/*.html' do
-  layout '/default.*'
-
-  if item.identifier =~ '**/index.*'
-    write item.identifier.to_s
-  else
-    write item.identifier.without_ext + '/index.html'
-  end
+compile '/status/*.md' do
+  filter :kramdown
+  layout '/guides.*'
+  write item.identifier.without_ext + '.html'
 end
 
 compile '/**/*.md' do
   filter :kramdown
   layout '/default.*'
+
   write item.identifier.without_ext + '.html'
 end
 
